Added endpoint to fetch all of reservations from owners establishments by status updated swagger
