# src/routes/reservation.routes.js
@@ -4,5 +4,6 @@ import { reservationController } from '../controllers';
 const reservationRouter = express.Router();
 
 reservationRouter.post('/', reservationController.Post());
+reservationRouter.get('/owner', reservationController.GetByOwnerAndStatus());
 
 export default reservationRouter;
